--- a/Virtual Dom/package.json
+++ b/Virtual Dom/package.json
@@ -26,6 +26,7 @@
     "list-diff2": "^0.1.4"
   },
   "devDependencies": {
+    "browserify": "^14.5.0",
     "chai": "^3.4.1",
     "codecov.io": "^0.1.6",
     "istanbul": "^0.4.3",
