--- a/parcel/package.json
+++ b/parcel/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel",
   "version": "1.0.0",
-  "description": "[中文文档](http://www.parceljs.io)",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "parcel index.html -p 3000",
@@ -17,4 +17,5 @@
     "node-sass": "^4.7.2",
     "postcss-modules": "^1.1.0"
   }
+
 }
